@@ -6,22 +6,30 @@
 # Not really a test, just making sure the program executes.
 
 TEXMFCNF=${srcdir}/../kpathsea
+TEXFONTS=${srcdir}/data
 DVIPDFMXINPUTS=${srcdir}/tests:${srcdir}/data
-export TEXMFCNF DVIPDFMXINPUTS
+TEXPICTS=${srcdir}/tests
+export TEXMFCNF TEXFONTS DVIPDFMXINPUTS TEXPICTS
 
 failed=
 
 echo "*** dvipdfmx --version" \
 	&& ./dvipdfmx --version \
-	&& echo "dvipdfmx-version tests OK" && echo \
+	&& echo && echo "dvipdfmx-version tests OK" && echo \
 	|| failed="$failed dvipdfmx-version"
 
 echo "*** dvipdfmx --help" \
 	&& ./dvipdfmx --help \
-	&& echo "dvipdfmx-help tests OK" && echo \
+	&& echo && echo "dvipdfmx-help tests OK" && echo \
 	|| failed="$failed dvipdfmx-help"
 
+echo "*** dvipdfmx -v -o image1.pdf image" && echo \
+	&& ./dvipdfmx -v -o image1.pdf ${srcdir}/tests/image \
+	&& echo && echo "dvipdfmx-image tests OK" && echo \
+	|| failed="$failed dvipdfmx-image"	
+
 test -z "$failed" && exit 0
+echo
 echo "failed tests:$failed"
 exit 1
 
