@@ -6,22 +6,35 @@
 # Not really a test, just making sure the program executes.
 
 TEXMFCNF=${srcdir}/../kpathsea
+TEXFONTS=${srcdir}/data
 DVIPDFMXINPUTS=${srcdir}/tests:${srcdir}/data
-export TEXMFCNF DVIPDFMXINPUTS
+TEXPICTS=${srcdir}/tests
+export TEXMFCNF TEXFONTS DVIPDFMXINPUTS TEXPICTS
 
 failed=
 
 echo "*** xdvipdfmx --version" \
 	&& ./xdvipdfmx --version \
-	&& echo "xdvipdfmx-version tests OK" && echo \
+	&& echo && echo "xdvipdfmx-version tests OK" && echo \
 	|| failed="$failed xdvipdfmx-version"
 
 echo "*** xdvipdfmx --help" \
 	&& ./xdvipdfmx --help \
-	&& echo "xdvipdfmx-help tests OK" && echo \
+	&& echo && echo "xdvipdfmx-help tests OK" && echo \
 	|| failed="$failed xdvipdfmx-help"
 
+# This test can fail (why?) and is skipped unless XDVIPDFMX_IMAGE is non-empty.
+if test -z "$XDVIPDFMX_IMAGE"; then :; else
+
+echo "*** xdvipdfmx -v -o image2.pdf image" && echo \
+	&& ./xdvipdfmx -v -o image2.pdf ${srcdir}/tests/image \
+	&& echo && echo "xdvipdfmx-image tests OK" && echo \
+	|| failed="$failed xdvipdfmx-image"	
+
+fi
+
 test -z "$failed" && exit 0
+echo
 echo "failed tests:$failed"
 exit 1
 
